k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-portfolio-db
spec:
  selector:
    matchLabels:
      app: portal-portfolio-db
  template:
    metadata:
      labels:
        app: portal-portfolio-db
    spec:
      containers:
        - name: portal-portfolio-db
          image: mongo:4.0.6
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "400Mi"
          volumeMounts:
            - mountPath: "/data/db"
              name: portal-portfolio-db-data-pv-storage
            - mountPath: "/docker-entrypoint-initdb.d"
              name: portal-portfolio-db-init-pv-storage
      volumes:
        - name: portal-portfolio-db-data-pv-storage
          persistentVolumeClaim:
            claimName: portal-portfolio-db-data-pv-claim
        - name: portal-portfolio-db-init-pv-storage
          persistentVolumeClaim:
            claimName: portal-portfolio-db-init-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: portal-portfolio-db-service
spec:
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30000
  type: NodePort
  selector:
    app: portal-portfolio-db
